--- a/css/main.css
+++ b/css/main.css
@@ -493,7 +493,7 @@ li {
 }
 
 .footer {
-  padding: 80px 0 70px 0;
+  padding: 80px 0 20px 0;
   background: #061945;
 }
 .footer__inner {
@@ -505,7 +505,7 @@ li {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 30px;
+  gap: 80px 30px;
 }
 .footer__inner-info {
   width: 320px;
@@ -673,6 +673,44 @@ li {
   line-height: 1.2;
   text-transform: capitalize;
   margin-bottom: 0.85em;
+}
+.footer__copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  margin-top: 160px;
+  color: #fff;
+  text-align: center;
+  font-size: 14px;
+}
+.footer__copyright p {
+  font-size: inherit;
+}
+.footer__copyright span {
+  text-transform: uppercase;
+}
+.footer__copyright a {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-size: inherit;
+  margin-left: 0.5em;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+}
+.footer__copyright a img {
+  height: 1.2em;
+  width: auto;
+}
+.footer__copyright a:hover {
+  opacity: 0.8;
 }
 
 .header {
