--- a/css/components/2-layout/footer.scss
+++ b/css/components/2-layout/footer.scss
@@ -205,7 +205,7 @@
 }
 @mixin footer-940 {
   .footer {
-    padding: 60px 0;
+    padding: 60px 0 20px 0;
 
     &__inner {
       gap: 30px;
@@ -240,6 +240,9 @@
         background: rgba($white, 0.1);
       }
     }
+    &__copyright {
+      margin-top: 120px;
+    }
   }
 }
 
@@ -263,6 +266,9 @@
           font-size: 16px;
         }
       }
+    }
+    &__copyright {
+      margin-top: 100px;
     }
   }
 }
@@ -301,6 +307,10 @@
       .button {
         font-size: 16px;
       }
+    }
+    &__copyright {
+      font-size: 11px;
+      margin-top: 80px;
     }
   }
 }
