--- a/css/main.css
+++ b/css/main.css
@@ -2081,7 +2081,7 @@ li {
     font-size: 18px;
   }
   .footer {
-    padding: 60px 0;
+    padding: 60px 0 20px 0;
   }
   .footer__inner {
     gap: 30px;
@@ -2128,6 +2128,9 @@ li {
     gap: 30px;
     padding: 30px;
     background: rgba(255, 255, 255, 0.1);
+  }
+  .footer__copyright {
+    margin-top: 120px;
   }
   .hero {
     padding: 200px 0 160px 0;
@@ -2219,6 +2222,9 @@ li {
   }
   .footer__inner-links a {
     font-size: 16px;
+  }
+  .footer__copyright {
+    margin-top: 100px;
   }
   .header__inner .logo {
     font-size: 13px;
@@ -2333,6 +2339,10 @@ li {
   }
   .footer__inner .button {
     font-size: 16px;
+  }
+  .footer__copyright {
+    font-size: 11px;
+    margin-top: 80px;
   }
   .contact__inner-list {
     gap: 12px;
