--- a/css/components/2-layout/footer.scss
+++ b/css/components/2-layout/footer.scss
@@ -94,33 +94,23 @@
         }
       }
     }
-    &-mailing {
-      display: flex;
-      flex-direction: column;
-      width: 320px;
 
-      .input {
-        margin-bottom: 20px;
-      }
-      .button {
-        align-self: flex-start;
-      }
-    }
     &-form {
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
-      width: 100%;
-      max-width: 860px;
+      width: 320px;
 
       h4 {
         width: 100%;
       }
-
-      &-group {
+      form {
+        width: 100%;
+      }
+      &-column {
         display: flex;
         flex-direction: column;
-        flex: 1 0 0;
+        gap: 25px;
 
         label {
           color: $white;
@@ -137,8 +127,7 @@
         }
       }
       .input {
-        flex-grow: 1;
-        width: unset;
+        width: 100%;
         font-size: 16px;
       }
     }
@@ -155,7 +144,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-top: 160px;
+    margin-top: 120px;
     color: $white;
     text-align: center;
     font-size: 14px;
@@ -184,6 +173,18 @@
   }
 }
 
+@mixin footer-1280 {
+  .footer {
+    &__inner {
+      &-info {
+        width: 280px;
+      }
+      &-links {
+        width: calc(100% - 640px);
+      }
+    }
+  }
+}
 @mixin footer-1160 {
   .footer {
     &__inner {
@@ -193,12 +194,18 @@
         width: 40%;
       }
       &-links {
+        justify-content: space-around;
         width: 100%;
-        max-width: 450px;
-        order: 1;
+        max-width: 550px;
       }
       &-form {
-        order: 1;
+        width: 100%;
+        border-top: 1px solid rgba($secondary-light, 0.2);
+        padding-top: 30px;
+
+        &-column {
+          max-width: 450px;
+        }
       }
     }
   }
@@ -209,8 +216,7 @@
 
     &__inner {
       gap: 30px;
-      flex-direction: column;
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto;
       &-info {
         display: flex;
@@ -226,12 +232,14 @@
       }
       &-links {
         width: 100%;
-        max-width: unset;
+        justify-content: flex-start;
+        gap: 60px;
         order: 1;
+        max-width: 360px;
         padding-top: 30px;
       }
       &-form {
-        order: 1;
+        width: calc(100% - 400px);
         border-top: 1px solid rgba($secondary-light, 0.4);
         padding-top: 30px;
         flex-direction: column;
@@ -241,14 +249,16 @@
       }
     }
     &__copyright {
-      margin-top: 120px;
+      margin-top: 100px;
     }
   }
 }
-
 @mixin footer-768 {
   .footer {
     &__inner {
+      flex-direction: column;
+      max-width: 600px;
+
       &-info {
         .logo {
           font-size: 16px;
@@ -261,18 +271,28 @@
           }
         }
       }
+      &-form {
+        width: 100%;
+        padding: 30px 60px;
+        &-column {
+          width: 100%;
+          max-width: unset;
+        }
+      }
       &-links {
+        order: unset;
+        width: 100%;
+        justify-content: space-between;
         a {
           font-size: 16px;
         }
       }
     }
     &__copyright {
-      margin-top: 100px;
+      margin-top: 80px;
     }
   }
 }
-
 @mixin footer-460 {
   .footer {
     &__inner {
@@ -283,7 +303,8 @@
         &-list {
           gap: 5px;
           li {
-            font-size: 15px;
+            font-size: 14px;
+            line-height: 1.3;
           }
         }
       }
@@ -293,7 +314,7 @@
         }
       }
       &-form {
-        padding: 30px 15px;
+        padding: 30px;
 
         &-group {
           label {
@@ -310,7 +331,7 @@
     }
     &__copyright {
       font-size: 11px;
-      margin-top: 80px;
+      margin-top: 70px;
     }
   }
 }
