--- a/css/components/2-layout/header.scss
+++ b/css/components/2-layout/header.scss
@@ -33,7 +33,7 @@
     left: 50%;
     width: 100%;
     height: 0;
-    background: $secondary;
+    background: $secondary-light;
     opacity: 0;
     transform: translateX(-50%);
   }
@@ -41,14 +41,14 @@
     position: fixed;
     padding: 10px 0;
     transition-duration: 0.5s;
-    background: $white;
+    background: $black-secondary;
+
     &:after {
       opacity: 1;
       height: 2px;
       transition: 0.3s ease-out;
     }
     .nav__inner-link {
-      color: $black;
     }
   }
 }
@@ -212,12 +212,6 @@
       .burger {
         display: block;
         z-index: 2;
-      }
-    }
-
-    &.sticky {
-      .burger {
-        color: $secondary;
       }
     }
   }
