--- a/css/components/2-layout/responsive.scss
+++ b/css/components/2-layout/responsive.scss
@@ -2,8 +2,9 @@
   @include header-1390;
 }
 @media (max-width: 1280px) {
-  @include header-1280;
   @include typography-1280;
+  @include header-1280;
+  @include footer-1280;
   @include index-1280;
 }
 @media (max-width: 1160px) {
