--- a/css/components/3-pages/index.scss
+++ b/css/components/3-pages/index.scss
@@ -22,7 +22,11 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(45deg, $black-secondary, transparent);
+      background: linear-gradient(
+        45deg,
+        $black-secondary,
+        rgba($black-secondary, 0.35)
+      );
       opacity: 0.4;
     }
   }
@@ -32,8 +36,11 @@
     gap: 30px;
     color: $white;
     max-width: 700px;
-    width: 60%;
+    width: 63%;
 
+    .logo {
+      font-size: 49px;
+    }
     h1 {
       font-weight: 600;
     }
@@ -565,6 +572,15 @@
         &-slide {
           height: calc(50% - 10px) !important;
           padding: 10px;
+
+          &.disabled {
+            display: none !important;
+          }
+        }
+        &-wrapper {
+          display: flex !important;
+          flex-direction: column !important;
+          flex-wrap: wrap !important;
         }
       }
     }
@@ -748,6 +764,11 @@
 @mixin index-1160 {
   .hero {
     padding: 260px 0 200px 0;
+    &__inner {
+      .logo {
+        font-size: 40px;
+      }
+    }
   }
   .about {
     &__inner {
@@ -947,6 +968,11 @@
 @mixin index-940 {
   .hero {
     padding: 200px 0 160px 0;
+    &__inner {
+      .logo {
+        font-size: 36px;
+      }
+    }
   }
   .charger {
     &__inner {
@@ -1027,7 +1053,7 @@
   .hero {
     &__inner {
       width: 100%;
-      max-width: 600px;
+      max-width: 540px;
     }
   }
 
@@ -1087,6 +1113,13 @@
   }
 }
 @mixin index-580 {
+  .hero {
+    &__inner {
+      .logo {
+        font-size: 32px;
+      }
+    }
+  }
   .about {
     &__inner {
       &-content {
@@ -1108,7 +1141,7 @@
     &__inner {
       &-tabs {
         gap: 10px;
-        justify-content: space-between;
+        justify-content: space-evenly;
       }
       &-tab {
         font-size: 16px;
@@ -1132,6 +1165,13 @@
   }
 }
 @mixin index-460 {
+  .hero {
+    &__inner {
+      .logo {
+        font-size: 26px;
+      }
+    }
+  }
   .contact {
     &__inner {
       &-list {
