--- a/css/components/2-layout/components.scss
+++ b/css/components/2-layout/components.scss
@@ -152,11 +152,17 @@
   display: flex;
   width: 10em;
   height: 3em;
-  
+
   img {
     width: 100%;
     height: auto;
     max-height: 100%;
     object-fit: contain;
   }
+}
+.anchor {
+  position: relative;
+  width: 0;
+  height: 0;
+  top: -100px;
 }
