--- a/css/components/2-layout/footer.scss
+++ b/css/components/2-layout/footer.scss
@@ -68,6 +68,7 @@
           line-height: 1.2;
           margin-bottom: 0.6em;
           transition: 0.2s ease-out;
+          text-transform: capitalize;
 
           &:after {
             position: absolute;
