--- a/css/components/1-main/nulifier.scss
+++ b/css/components/1-main/nulifier.scss
@@ -45,6 +45,7 @@ input::-webkit-inner-spin-button {
 }
 
 body {
+  cursor: default;
   font-family: $font-secondary, sans-serif;
   font-size: 14px;
   color: $black;
