--- a/css/components/1-main/variables.scss
+++ b/css/components/1-main/variables.scss
@@ -1,9 +1,9 @@
 $primary: #ff8a00;
 $secondary: #243763;
 $secondary-light: #a6b9e5;
-$black: #101010;
+$black: #000000;
 $black-1: #141622;
-$black-secondary: #061945;
+$black-secondary: #232b3d;
 $white: #fff;
 $white-1: #eaeaea;
 $gray: #d9d9d9;
