--- a/css/components/2-layout/components.scss
+++ b/css/components/2-layout/components.scss
@@ -54,6 +54,9 @@
       border: 0;
       border-bottom: 1px solid $white;
       background: transparent;
+      &::placeholder {
+        color: $white;
+      }
     }
   }
 }
