--- a/css/components/3-pages/index.scss
+++ b/css/components/3-pages/index.scss
@@ -55,6 +55,9 @@
       }
     }
   }
+  .autoContainer {
+    max-width: 1850px;
+  }
 }
 /// section about
 .about {
@@ -252,67 +255,60 @@
       margin-bottom: 30px;
       text-align: center;
     }
-    &-header {
+    &-row {
       display: flex;
       justify-content: space-between;
-      gap: 30px;
-      margin-bottom: 30px;
-
-      &-text {
-        width: calc(66.66% - 30px);
-        max-width: 750px;
-      }
-      &-list {
-        width: 33.3%;
+      position: relative;
+      &-wrapper {
+        max-width: 940px;
+        width: calc(100% - 430px);
         display: flex;
         flex-direction: column;
-        gap: 20px;
-
-        li {
-          position: relative;
-          padding-left: 1.75em;
-          //font
-          color: $black;
-          font-style: normal;
-          font-weight: 400;
-          font-size: 20px;
-          line-height: 1.3;
-
-          &:after {
-            position: absolute;
-            content: "";
-            top: 0.2em;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            width: 1.1em;
-            height: 1.1em;
-            background: url(../../../images/icons/tick.svg);
-            background-repeat: no-repeat;
-            background-size: contain;
-          }
+        gap: 80px;
+      }
+    }
+    &-text {
+      max-width: 750px;
+    }
+    &-list {
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      li {
+        position: relative;
+        padding-left: 1.75em;
+        //font
+        color: $black;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 1.3;
+        &:after {
+          position: absolute;
+          content: "";
+          top: 0.2em;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          width: 1.1em;
+          height: 1.1em;
+          background: url("../images/icons/tick.svg");
+          background-repeat: no-repeat;
+          background-size: contain;
         }
       }
     }
-
     &-slider {
-      position: relative;
       z-index: 0;
-
       &-item {
-        padding: 10px;
         .ratioImage {
           background: $gray;
-          padding-bottom: calc(95% - 60px);
-          box-shadow: 0px 0px 8px rgba(36, 55, 99, 0.4);
-          margin-bottom: 10px;
+          padding-bottom: unset;
+          height: 404px;
           transition: 0.25s ease-out;
-        }
-        &.swiper-slide-next,
-        &.swiper-slide-active {
-          .ratioImage {
-            padding-bottom: 95%;
-          }
         }
         p {
           color: $black;
@@ -336,7 +332,7 @@
       &-arrows {
         position: absolute;
         width: 33.3%;
-        right: 0;
+        right: 70px;
         bottom: 0;
         display: flex;
         justify-content: flex-end;
@@ -346,6 +342,9 @@
         font-size: 10px;
       }
     }
+  }
+  .autoContainer {
+    max-width: 1520px;
   }
 }
 /// section charger
@@ -502,6 +501,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        gap: 10px;
       }
 
       &-image {
@@ -630,7 +630,8 @@
       width: 7em;
       height: 1.8em;
       transition: 0.35s ease-out;
-
+      opacity: 0;
+      pointer-events: none;
       //font
       color: $white;
       color: transparent;
@@ -674,7 +675,7 @@
         color: $white;
         background: rgba($secondary, 0.8);
         transition: opacity 0.5s ease;
-
+        pointer-events: all;
         svg {
           color: $secondary-light;
         }
@@ -773,8 +774,33 @@
       }
     }
   }
+  .electrical {
+    &__inner {
+      &-row {
+        &-wrapper {
+          gap: 50px;
+          width: calc(100% - 390px);
+        }
+      }
+      &-list {
+        gap: 18px;
+        li {
+          font-size: 18px;
+        }
+      }
+      &-slider {
+        &-item {
+          .ratioImage {
+            height: 380px;
+          }
+        }
+        &-arrows {
+          right: 45px;
+        }
+      }
+    }
+  }
 }
-
 @mixin index-1160 {
   .hero {
     &__inner {
@@ -826,33 +852,41 @@
   /// section electrical
   .electrical {
     &__inner {
-      &-header {
-        flex-direction: column;
-        gap: 20px;
-
-        &-text {
+      &-row {
+        &-wrapper {
           width: 100%;
           max-width: unset;
+          gap: 40px 10px;
+          padding-bottom: 70px;
         }
-        &-list {
-          width: 100%;
-
-          li {
-            font-size: 18px;
-          }
+      }
+      &-text {
+        width: 100%;
+        max-width: unset;
+      }
+      &-list {
+        position: unset;
+        width: 100%;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        li {
+          width: calc(50% - 10px);
+          font-size: 16px;
         }
       }
       &-slider {
-        &-arrows {
-          position: unset;
-          width: 100%;
-          margin-top: 20px;
-          justify-content: center;
-        }
+        width: 100%;
         &-item {
           .ratioImage {
-            padding-bottom: 95%;
+            height: unset;
+            padding-bottom: 45%;
           }
+        }
+        &-arrows {
+          right: unset;
+          left: 50%;
+          transform: translateX(-50%);
         }
       }
     }
@@ -984,9 +1018,8 @@
 @mixin index-940 {
   .hero {
     padding: 90px 0 100px 0;
-
     &__inner {
-      justify-content: flex-end;
+      justify-content: center;
       min-height: calc(65vh - 190px);
 
       .logo {
@@ -1092,10 +1125,18 @@
   }
   .electrical {
     &__inner {
+      &-list {
+        gap: 10px;
+      }
+      &-row {
+        &-wrapper {
+          gap: 30px;
+        }
+      }
       &-slider {
         &-arrows {
-          margin-top: 25px;
           font-size: 8px !important;
+          margin-top: 25px;
           .swiper-dots {
             transform: translateY(0.25em);
           }
@@ -1183,6 +1224,27 @@
       }
       &-text {
         font-size: 14px;
+      }
+    }
+  }
+  .electrical {
+    &__inner {
+      &-list {
+        li {
+          width: 100%;
+        }
+      }
+      &-row {
+        &-wrapper {
+          gap: 30px;
+        }
+      }
+      &-slider {
+        &-item {
+          .ratioImage {
+            padding-bottom: 50%;
+          }
+        }
       }
     }
   }
