--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ h2 {
 }
 
 h3 {
-  font-size: 34px;
+  font-size: 44px;
 }
 
 h4 {
@@ -219,7 +219,7 @@ body {
   cursor: default;
   font-family: "Raleway", sans-serif, sans-serif;
   font-size: 14px;
-  color: #101010;
+  color: #000000;
   line-height: 1.7em;
   font-weight: 400;
   background: #fff;
@@ -340,6 +340,22 @@ li {
   border: 0;
   border-bottom: 1px solid #fff;
   background: transparent;
+}
+.input--underline input::-webkit-input-placeholder, .input--underline textarea::-webkit-input-placeholder {
+  color: #fff;
+}
+.input--underline input::-moz-placeholder, .input--underline textarea::-moz-placeholder {
+  color: #fff;
+}
+.input--underline input:-ms-input-placeholder, .input--underline textarea:-ms-input-placeholder {
+  color: #fff;
+}
+.input--underline input::-ms-input-placeholder, .input--underline textarea::-ms-input-placeholder {
+  color: #fff;
+}
+.input--underline input::placeholder,
+.input--underline textarea::placeholder {
+  color: #fff;
 }
 
 .button {
@@ -502,7 +518,7 @@ li {
 
 .footer {
   padding: 80px 0 30px 0;
-  background: #061945;
+  background: #232b3d;
 }
 .footer__inner {
   display: -webkit-box;
@@ -755,7 +771,7 @@ li {
   padding: 10px 0;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
-  background: #061945;
+  background: #232b3d;
 }
 .header.sticky:after {
   opacity: 1;
@@ -914,7 +930,7 @@ li {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, #061945, rgba(6, 25, 69, 0.35));
+  background: linear-gradient(45deg, #232b3d, rgba(35, 43, 61, 0.35));
   opacity: 0.4;
 }
 .hero__inner {
@@ -945,6 +961,9 @@ li {
 }
 .hero__inner-buttons .button {
   min-width: 50px;
+}
+.hero .autoContainer {
+  max-width: 1850px;
 }
 
 .about {
@@ -1153,7 +1172,7 @@ li {
   margin-bottom: 10px;
 }
 .construction__inner-slider-item p {
-  color: #101010;
+  color: #000000;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -1177,22 +1196,34 @@ li {
   margin-bottom: 30px;
   text-align: center;
 }
-.electrical__inner-header {
+.electrical__inner-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 30px;
-  margin-bottom: 30px;
+  position: relative;
 }
-.electrical__inner-header-text {
-  width: calc(66.66% - 30px);
+.electrical__inner-row-wrapper {
+  max-width: 940px;
+  width: calc(100% - 430px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 80px;
+}
+.electrical__inner-text {
   max-width: 750px;
 }
-.electrical__inner-header-list {
-  width: 33.3%;
+.electrical__inner-list {
+  position: absolute;
+  top: 0;
+  right: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1202,16 +1233,16 @@ li {
           flex-direction: column;
   gap: 20px;
 }
-.electrical__inner-header-list li {
+.electrical__inner-list li {
   position: relative;
   padding-left: 1.75em;
-  color: #101010;
+  color: #000000;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 1.3;
 }
-.electrical__inner-header-list li:after {
+.electrical__inner-list li:after {
   position: absolute;
   content: "";
   top: 0.2em;
@@ -1220,31 +1251,22 @@ li {
   height: 100%;
   width: 1.1em;
   height: 1.1em;
-  background: url(../../../images/icons/tick.svg);
+  background: url("../images/icons/tick.svg");
   background-repeat: no-repeat;
   background-size: contain;
 }
 .electrical__inner-slider {
-  position: relative;
   z-index: 0;
-}
-.electrical__inner-slider-item {
-  padding: 10px;
 }
 .electrical__inner-slider-item .ratioImage {
   background: #d9d9d9;
-  padding-bottom: calc(95% - 60px);
-  -webkit-box-shadow: 0px 0px 8px rgba(36, 55, 99, 0.4);
-          box-shadow: 0px 0px 8px rgba(36, 55, 99, 0.4);
-  margin-bottom: 10px;
+  padding-bottom: unset;
+  height: 404px;
   -webkit-transition: 0.25s ease-out;
   transition: 0.25s ease-out;
 }
-.electrical__inner-slider-item.swiper-slide-next .ratioImage, .electrical__inner-slider-item.swiper-slide-active .ratioImage {
-  padding-bottom: 95%;
-}
 .electrical__inner-slider-item p {
-  color: #101010;
+  color: #000000;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -1263,7 +1285,7 @@ li {
 .electrical__inner-slider-arrows {
   position: absolute;
   width: 33.3%;
-  right: 0;
+  right: 70px;
   bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1277,6 +1299,9 @@ li {
   margin-bottom: 5px;
   z-index: 1;
   font-size: 10px;
+}
+.electrical .autoContainer {
+  max-width: 1520px;
 }
 
 .charger {
@@ -1376,15 +1401,18 @@ li {
   border-bottom: 1px solid transparent;
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
-  scrollbar-width: none; /* Firefox 64 */
-  -ms-overflow-style: none; /* Internet Explorer 11 */
-  color: #101010;
+  scrollbar-width: none;
+  /* Firefox 64 */
+  -ms-overflow-style: none;
+  /* Internet Explorer 11 */
+  color: #000000;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 1.3;
 }
-.charger__tab-text::-webkit-scrollbar { /** WebKit */
+.charger__tab-text::-webkit-scrollbar {
+  /** WebKit */
   display: none;
 }
 .charger__tab.active .charger__tab-header {
@@ -1457,6 +1485,7 @@ li {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  gap: 10px;
 }
 .feedbacks__item-user-image {
   width: 5em;
@@ -1485,7 +1514,7 @@ li {
 .projects__inner-tab {
   cursor: pointer;
   position: relative;
-  color: #101010;
+  color: #000000;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
@@ -1603,6 +1632,8 @@ li {
   height: 1.8em;
   -webkit-transition: 0.35s ease-out;
   transition: 0.35s ease-out;
+  opacity: 0;
+  pointer-events: none;
   color: #fff;
   color: transparent;
   font-style: normal;
@@ -1647,6 +1678,7 @@ li {
   background: rgba(36, 55, 99, 0.8);
   -webkit-transition: opacity 0.5s ease;
   transition: opacity 0.5s ease;
+  pointer-events: all;
 }
 .projects__item:hover .projects__item-button svg {
   color: #a6b9e5;
@@ -1673,7 +1705,7 @@ li {
           flex-direction: column;
   gap: 20px;
   font-size: 24px;
-  color: #101010;
+  color: #000000;
 }
 .contact__inner-list strong {
   color: inherit;
@@ -1706,9 +1738,11 @@ li {
   .header__inner .logo {
     font-size: 18px;
   }
+
   .nav__inner-link {
     font-size: 20px;
   }
+
   .hero {
     padding: 170px 0 100px 0;
   }
@@ -1721,12 +1755,15 @@ li {
   .anchor {
     top: -80px;
   }
+
   h1 {
     font-size: 56px;
   }
+
   h2 {
     font-size: 44px;
   }
+
   p {
     font-size: 18px;
     line-height: 1.3em;
@@ -1738,21 +1775,25 @@ li {
     font-size: 16px;
     line-height: 1.3em;
   }
+
   .header__inner .logo {
     font-size: 16px;
   }
+
   .nav__inner {
     gap: 23px;
   }
   .nav__inner-link {
     font-size: 18px;
   }
+
   .footer__inner-info {
     width: 280px;
   }
   .footer__inner-links {
     width: calc(100% - 640px);
   }
+
   .about__inner {
     -webkit-box-align: end;
         -ms-flex-align: end;
@@ -1764,6 +1805,7 @@ li {
   .about__counter-item small {
     font-size: 18px;
   }
+
   .charger__inner-body-banner {
     width: calc(100% - 460px);
   }
@@ -1773,17 +1815,37 @@ li {
   .charger__tab-text {
     font-size: 18px;
   }
+
+  .electrical__inner-row-wrapper {
+    gap: 50px;
+    width: calc(100% - 390px);
+  }
+  .electrical__inner-list {
+    gap: 18px;
+  }
+  .electrical__inner-list li {
+    font-size: 18px;
+  }
+  .electrical__inner-slider-item .ratioImage {
+    height: 380px;
+  }
+  .electrical__inner-slider-arrows {
+    right: 45px;
+  }
 }
 @media (max-width: 1160px) {
   .autoContainer {
     padding: 0 40px;
   }
+
   h1 {
     font-size: 52px;
   }
+
   h2 {
     font-size: 40px;
   }
+
   p {
     font-size: 16px;
     line-height: 1.3em;
@@ -1795,9 +1857,11 @@ li {
     font-size: 14px;
     line-height: 1.2em;
   }
+
   .hero__inner .logo {
     font-size: 40px;
   }
+
   .about__inner-content {
     width: 420px;
     gap: 25px;
@@ -1811,6 +1875,7 @@ li {
   .about__counter-item small {
     font-size: 16px;
   }
+
   .construction__inner-row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
@@ -1830,34 +1895,48 @@ li {
   .construction__inner-slider {
     width: 100%;
   }
-  .electrical__inner-header {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: 20px;
+
+  .electrical__inner-row-wrapper {
+    width: 100%;
+    max-width: unset;
+    gap: 40px 10px;
+    padding-bottom: 70px;
   }
-  .electrical__inner-header-text {
+  .electrical__inner-text {
     width: 100%;
     max-width: unset;
   }
-  .electrical__inner-header-list {
-    width: 100%;
-  }
-  .electrical__inner-header-list li {
-    font-size: 18px;
-  }
-  .electrical__inner-slider-arrows {
+  .electrical__inner-list {
     position: unset;
     width: 100%;
-    margin-top: 20px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .electrical__inner-list li {
+    width: calc(50% - 10px);
+    font-size: 16px;
+  }
+  .electrical__inner-slider {
+    width: 100%;
   }
   .electrical__inner-slider-item .ratioImage {
-    padding-bottom: 95%;
+    height: unset;
+    padding-bottom: 45%;
   }
+  .electrical__inner-slider-arrows {
+    right: unset;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+
   .charger__inner-body-banner {
     width: calc(100% - 410px);
   }
@@ -1871,16 +1950,19 @@ li {
   .charger__tab-text {
     font-size: 16px;
   }
+
   .projects__inner-tabs {
     margin-bottom: 20px;
   }
   .projects__inner-tab {
     font-size: 20px;
   }
+
   .contact__inner-list {
     gap: 15px;
     font-size: 22px;
   }
+
   .footer__inner {
     gap: 50px;
   }
@@ -1906,12 +1988,15 @@ li {
   .autoContainer {
     padding: 0 30px;
   }
+
   .anchor {
     top: -60px;
   }
+
   h1 {
     font-size: 48px;
   }
+
   .header {
     padding: 25px 0;
   }
@@ -1927,13 +2012,14 @@ li {
     display: block;
     z-index: 2;
   }
+
   .nav {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(16, 16, 16, 0.4);
+    background: rgba(0, 0, 0, 0.4);
     -webkit-backdrop-filter: blur(4px);
             backdrop-filter: blur(4px);
     z-index: 0;
@@ -1964,8 +2050,8 @@ li {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     background: #fff;
-    -webkit-box-shadow: 0px 4px 24px -1px rgba(16, 16, 16, 0.2);
-            box-shadow: 0px 4px 24px -1px rgba(16, 16, 16, 0.2);
+    -webkit-box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.2);
     padding: 50px 25px;
     -webkit-transform: translate(-100%);
             transform: translate(-100%);
@@ -1983,7 +2069,7 @@ li {
             align-items: flex-start;
     padding: 25px 0;
     gap: 8px;
-    color: #101010;
+    color: #000000;
     border-top: 1px solid #fff;
     width: 100%;
   }
@@ -1991,7 +2077,7 @@ li {
     border: 0;
   }
   .nav__inner-link {
-    color: #101010;
+    color: #000000;
   }
   .nav__inner-link:after {
     display: none;
@@ -2026,12 +2112,14 @@ li {
     -webkit-transform: translate(0);
             transform: translate(0);
   }
+
   .hero {
     padding: 100px 0 120px 0;
   }
   .hero__inner {
     min-height: calc(95vh - 220px);
   }
+
   .about__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2074,6 +2162,7 @@ li {
     -webkit-transition-delay: 0s !important;
             transition-delay: 0s !important;
   }
+
   .charger__inner-body-banner {
     width: calc(100% - 370px);
   }
@@ -2086,9 +2175,11 @@ li {
   .charger__tab-text {
     font-size: 14px;
   }
+
   .feedbacks__item-user {
     font-size: 18px;
   }
+
   .contact__inner-list {
     gap: 15px;
     font-size: 20px;
@@ -2098,21 +2189,27 @@ li {
   .autoContainer {
     padding: 0 25px;
   }
+
   h1 {
     font-size: 44px;
   }
+
   h2 {
     font-size: 38px;
   }
+
   h3 {
-    font-size: 32px;
+    font-size: 38px;
   }
+
   h4 {
     font-size: 22px;
   }
+
   h5 {
     font-size: 18px;
   }
+
   .footer {
     padding: 60px 0 30px 0;
   }
@@ -2163,18 +2260,20 @@ li {
   .footer__copyright {
     margin-top: 100px;
   }
+
   .hero {
     padding: 90px 0 100px 0;
   }
   .hero__inner {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     min-height: calc(65vh - 190px);
   }
   .hero__inner .logo {
     font-size: 36px;
   }
+
   .charger__inner-body {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2200,6 +2299,7 @@ li {
   .charger__tab-text {
     font-size: 16px;
   }
+
   .projects__inner-slider {
     position: relative;
     padding-bottom: unset;
@@ -2224,9 +2324,11 @@ li {
     right: unset;
     font-size: 14px;
   }
+
   .projects__inner-tab {
     font-size: 18px;
   }
+
   .contact__inner-list {
     gap: 15px;
     font-size: 18px;
@@ -2236,21 +2338,27 @@ li {
   .autoContainer {
     padding: 0 15px;
   }
+
   h1 {
     font-size: 42px;
   }
+
   h2 {
     font-size: 34px;
   }
+
   h3 {
-    font-size: 28px;
+    font-size: 34px;
   }
+
   h4 {
     font-size: 20px;
   }
+
   p.xlg {
     font-size: 18px;
   }
+
   .footer__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2290,12 +2398,14 @@ li {
   .footer__copyright {
     margin-top: 80px;
   }
+
   .header__inner .logo {
     font-size: 13px;
   }
   .header__inner .burger {
     font-size: 8px;
   }
+
   .hero {
     margin-bottom: 20px;
   }
@@ -2303,6 +2413,7 @@ li {
     width: 100%;
     max-width: 540px;
   }
+
   .construction__inner-info-arrows {
     font-size: 8px !important;
   }
@@ -2310,14 +2421,22 @@ li {
     -webkit-transform: translateY(0.25em);
             transform: translateY(0.25em);
   }
+
+  .electrical__inner-list {
+    gap: 10px;
+  }
+  .electrical__inner-row-wrapper {
+    gap: 30px;
+  }
   .electrical__inner-slider-arrows {
-    margin-top: 25px;
     font-size: 8px !important;
+    margin-top: 25px;
   }
   .electrical__inner-slider-arrows .swiper-dots {
     -webkit-transform: translateY(0.25em);
             transform: translateY(0.25em);
   }
+
   .feedbacks__item {
     padding: 10px;
   }
@@ -2332,6 +2451,7 @@ li {
     -webkit-transform: translateY(0.25em);
             transform: translateY(0.25em);
   }
+
   .projects__inner-arrows {
     font-size: 8px !important;
     margin-top: 25px;
@@ -2345,15 +2465,19 @@ li {
   ._hideMob {
     display: none;
   }
+
   h1 {
     font-size: 38px;
   }
+
   h2 {
     font-size: 30px;
   }
+
   h3 {
-    font-size: 26px;
+    font-size: 28px;
   }
+
   .hero {
     padding: 90px 0 60px 0;
   }
@@ -2366,6 +2490,7 @@ li {
   .hero__inner .logo {
     font-size: 32px;
   }
+
   .about__inner-content {
     gap: 20px;
   }
@@ -2375,6 +2500,7 @@ li {
   .about__counter-item small {
     font-size: 14px;
   }
+
   .projects__inner-tabs {
     gap: 10px;
     -webkit-box-pack: space-evenly;
@@ -2384,6 +2510,7 @@ li {
   .projects__inner-tab {
     font-size: 16px;
   }
+
   .charger__inner-body {
     gap: 20px;
   }
@@ -2392,6 +2519,16 @@ li {
   }
   .charger__tab-text {
     font-size: 14px;
+  }
+
+  .electrical__inner-list li {
+    width: 100%;
+  }
+  .electrical__inner-row-wrapper {
+    gap: 30px;
+  }
+  .electrical__inner-slider-item .ratioImage {
+    padding-bottom: 50%;
   }
 }
 @media (max-width: 460px) {
@@ -2424,6 +2561,7 @@ li {
     font-size: 11px;
     margin-top: 70px;
   }
+
   .hero {
     margin-bottom: 0;
   }
@@ -2436,10 +2574,12 @@ li {
   .hero__inner h1 br {
     display: none;
   }
+
   .contact__inner-list {
     gap: 12px;
     font-size: 16px;
   }
+
   .construction__inner-info-arrows {
     width: 100%;
     -webkit-box-pack: justify;
@@ -2447,6 +2587,7 @@ li {
             justify-content: space-between;
     font-size: 6px !important;
   }
+
   .electrical__inner-slider-arrows {
     width: 100%;
     -webkit-box-pack: justify;
@@ -2455,6 +2596,7 @@ li {
     margin-top: 25px;
     font-size: 6px !important;
   }
+
   .feedbacks__item {
     padding: 10px;
   }
@@ -2469,6 +2611,7 @@ li {
     font-size: 6px !important;
     margin-top: 20px;
   }
+
   .projects__inner-tab {
     font-size: 14px;
   }
