licnese and footer mobile updates

--- a/css/components/2-layout/footer.scss
+++ b/css/components/2-layout/footer.scss
@@ -298,6 +298,8 @@
   .footer {
     &__inner {
       &-info {
+        flex-direction: column;
+        gap: 1em;
         .logo {
           font-size: 14px;
         }
