--- a/css/components/1-main/variables.scss
+++ b/css/components/1-main/variables.scss
@@ -7,7 +7,10 @@ $black-secondary: #232b3d;
 $white: #fff;
 $white-1: #eaeaea;
 $gray: #d9d9d9;
+$gray-2: #616161;
 
 $font-primary: "Prompt", sans-serif;
 $font-secondary: "Raleway", sans-serif;
 $font-dm-sans: "DM Sans", $font-secondary;
+
+$font-lato: 'Lato', sans-serif;
