--- a/css/components/1-main/typography.scss
+++ b/css/components/1-main/typography.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 /* Typography */
 h1 {
