--- a/css/components/2-layout/footer.scss
+++ b/css/components/2-layout/footer.scss
@@ -112,7 +112,7 @@
         display: flex;
         flex-direction: column;
         gap: 25px;
-
+        width: 100%;
         label {
           color: $white;
           font-family: $font-secondary;
@@ -245,8 +245,7 @@
         padding-top: 30px;
         flex-direction: column;
         gap: 30px;
-        padding: 30px;
-        background: rgba($white, 0.1);
+        padding: 30px 0;
       }
     }
     &__copyright {
@@ -340,6 +339,11 @@
 }
 @mixin footer-370 {
   .footer {
+    &__inner{
+      &-form{
+        padding: 20px 10px;
+      }
+    }
     &__copyright {
       font-size: 10px;
     }
