--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import "./animate.css";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 @-webkit-keyframes zoomInCenter {
   from {
     opacity: 0;
@@ -275,7 +276,7 @@ li {
   border-radius: 2em;
   width: 100%;
   background-color: #fff;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   resize: none;
   -webkit-transition: 0.3s ease-out;
   transition: 0.3s ease-out;
@@ -355,6 +356,87 @@ li {
 }
 .input--underline input::placeholder,
 .input--underline textarea::placeholder {
+  color: #fff;
+}
+.input--text input {
+  background: unset;
+  border-radius: unset;
+  color: #fff !important;
+  padding: 1em 1.5em;
+  border-color: #616161;
+}
+.input--text input:focus {
+  border-color: #fff;
+}
+.input--text input:focus::-webkit-input-placeholder {
+  color: #fff;
+}
+.input--text input:focus::-moz-placeholder {
+  color: #fff;
+}
+.input--text input:focus:-ms-input-placeholder {
+  color: #fff;
+}
+.input--text input:focus::-ms-input-placeholder {
+  color: #fff;
+}
+.input--text input:focus::placeholder {
+  color: #fff;
+}
+.input--text input::-webkit-input-placeholder {
+  color: #616161;
+}
+.input--text input::-moz-placeholder {
+  color: #616161;
+}
+.input--text input:-ms-input-placeholder {
+  color: #616161;
+}
+.input--text input::-ms-input-placeholder {
+  color: #616161;
+}
+.input--text input::placeholder {
+  color: #616161;
+}
+.input--text textarea {
+  border-color: #616161;
+  background: unset;
+  border-radius: unset;
+  color: #fff;
+  padding: 1em 1.5em;
+  min-height: 100px;
+}
+.input--text textarea::-webkit-input-placeholder {
+  color: #616161;
+}
+.input--text textarea::-moz-placeholder {
+  color: #616161;
+}
+.input--text textarea:-ms-input-placeholder {
+  color: #616161;
+}
+.input--text textarea::-ms-input-placeholder {
+  color: #616161;
+}
+.input--text textarea::placeholder {
+  color: #616161;
+}
+.input--text textarea:focus {
+  border-color: #fff;
+}
+.input--text textarea:focus::-webkit-input-placeholder {
+  color: #fff;
+}
+.input--text textarea:focus::-moz-placeholder {
+  color: #fff;
+}
+.input--text textarea:focus:-ms-input-placeholder {
+  color: #fff;
+}
+.input--text textarea:focus::-ms-input-placeholder {
+  color: #fff;
+}
+.input--text textarea:focus::placeholder {
   color: #fff;
 }
 
@@ -652,6 +734,7 @@ li {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 25px;
+  width: 100%;
 }
 .footer__inner-form-column label {
   color: #fff;
@@ -944,6 +1027,9 @@ li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   gap: 30px;
   color: #fff;
   max-width: 700px;
@@ -961,7 +1047,7 @@ li {
 }
 .hero__inner-license {
   color: #fff;
-  font-family: "Raleway", sans-serif;
+  font-family: "Lato", sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 30px;
@@ -1214,7 +1300,6 @@ li {
   position: relative;
 }
 .electrical__inner-row-wrapper {
-  max-width: 940px;
   width: calc(100% - 430px);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1409,15 +1494,18 @@ li {
   border-bottom: 1px solid transparent;
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
-  scrollbar-width: none; /* Firefox 64 */
-  -ms-overflow-style: none; /* Internet Explorer 11 */
+  scrollbar-width: none;
+  /* Firefox 64 */
+  -ms-overflow-style: none;
+  /* Internet Explorer 11 */
   color: #000000;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 1.3;
 }
-.charger__tab-text::-webkit-scrollbar { /** WebKit */
+.charger__tab-text::-webkit-scrollbar {
+  /** WebKit */
   display: none;
 }
 .charger__tab.active .charger__tab-header {
@@ -1743,9 +1831,11 @@ li {
   .header__inner .logo {
     font-size: 18px;
   }
+
   .nav__inner-link {
     font-size: 20px;
   }
+
   .hero {
     padding: 170px 0 100px 0;
   }
@@ -1758,12 +1848,15 @@ li {
   .anchor {
     top: -80px;
   }
+
   h1 {
     font-size: 56px;
   }
+
   h2 {
     font-size: 44px;
   }
+
   p {
     font-size: 18px;
     line-height: 1.3em;
@@ -1775,21 +1868,25 @@ li {
     font-size: 16px;
     line-height: 1.3em;
   }
+
   .header__inner .logo {
     font-size: 16px;
   }
+
   .nav__inner {
     gap: 23px;
   }
   .nav__inner-link {
     font-size: 18px;
   }
+
   .footer__inner-info {
     width: 280px;
   }
   .footer__inner-links {
     width: calc(100% - 640px);
   }
+
   .about__inner {
     -webkit-box-align: end;
         -ms-flex-align: end;
@@ -1801,6 +1898,7 @@ li {
   .about__counter-item small {
     font-size: 18px;
   }
+
   .charger__inner-body-banner {
     width: calc(100% - 460px);
   }
@@ -1810,6 +1908,7 @@ li {
   .charger__tab-text {
     font-size: 18px;
   }
+
   .electrical__inner-row-wrapper {
     gap: 50px;
     width: calc(100% - 390px);
@@ -1831,12 +1930,15 @@ li {
   .autoContainer {
     padding: 0 40px;
   }
+
   h1 {
     font-size: 52px;
   }
+
   h2 {
     font-size: 40px;
   }
+
   p {
     font-size: 16px;
     line-height: 1.3em;
@@ -1848,12 +1950,14 @@ li {
     font-size: 14px;
     line-height: 1.2em;
   }
+
   .hero__inner .logo {
     font-size: 40px;
   }
   .hero__inner-license {
     font-size: 26px;
   }
+
   .about__inner-content {
     width: 420px;
     gap: 25px;
@@ -1867,6 +1971,7 @@ li {
   .about__counter-item small {
     font-size: 16px;
   }
+
   .construction__inner-row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
@@ -1886,6 +1991,7 @@ li {
   .construction__inner-slider {
     width: 100%;
   }
+
   .electrical__inner-row-wrapper {
     width: 100%;
     max-width: unset;
@@ -1926,6 +2032,7 @@ li {
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
   }
+
   .charger__inner-body-banner {
     width: calc(100% - 410px);
   }
@@ -1939,16 +2046,19 @@ li {
   .charger__tab-text {
     font-size: 16px;
   }
+
   .projects__inner-tabs {
     margin-bottom: 20px;
   }
   .projects__inner-tab {
     font-size: 20px;
   }
+
   .contact__inner-list {
     gap: 15px;
     font-size: 22px;
   }
+
   .footer__inner {
     gap: 50px;
   }
@@ -1974,12 +2084,15 @@ li {
   .autoContainer {
     padding: 0 30px;
   }
+
   .anchor {
     top: -60px;
   }
+
   h1 {
     font-size: 48px;
   }
+
   .header {
     padding: 25px 0;
   }
@@ -1995,6 +2108,7 @@ li {
     display: block;
     z-index: 2;
   }
+
   .nav {
     position: fixed;
     top: 0;
@@ -2094,12 +2208,14 @@ li {
     -webkit-transform: translate(0);
             transform: translate(0);
   }
+
   .hero {
     padding: 100px 0 120px 0;
   }
   .hero__inner {
     min-height: calc(95vh - 220px);
   }
+
   .about__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2142,6 +2258,7 @@ li {
     -webkit-transition-delay: 0s !important;
             transition-delay: 0s !important;
   }
+
   .charger__inner-body-banner {
     width: calc(100% - 370px);
   }
@@ -2154,9 +2271,11 @@ li {
   .charger__tab-text {
     font-size: 14px;
   }
+
   .feedbacks__item-user {
     font-size: 18px;
   }
+
   .contact__inner-list {
     gap: 15px;
     font-size: 20px;
@@ -2166,21 +2285,27 @@ li {
   .autoContainer {
     padding: 0 25px;
   }
+
   h1 {
     font-size: 44px;
   }
+
   h2 {
     font-size: 38px;
   }
+
   h3 {
     font-size: 38px;
   }
+
   h4 {
     font-size: 22px;
   }
+
   h5 {
     font-size: 18px;
   }
+
   .footer {
     padding: 60px 0 30px 0;
   }
@@ -2225,12 +2350,12 @@ li {
         -ms-flex-direction: column;
             flex-direction: column;
     gap: 30px;
-    padding: 30px;
-    background: rgba(255, 255, 255, 0.1);
+    padding: 30px 0;
   }
   .footer__copyright {
     margin-top: 100px;
   }
+
   .hero {
     padding: 90px 0 100px 0;
   }
@@ -2246,6 +2371,7 @@ li {
   .hero__inner .logo {
     font-size: 36px;
   }
+
   .charger__inner-body {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2271,6 +2397,7 @@ li {
   .charger__tab-text {
     font-size: 16px;
   }
+
   .projects__inner-slider {
     position: relative;
     padding-bottom: unset;
@@ -2295,9 +2422,11 @@ li {
     right: unset;
     font-size: 14px;
   }
+
   .projects__inner-tab {
     font-size: 18px;
   }
+
   .contact__inner-list {
     gap: 15px;
     font-size: 18px;
@@ -2307,21 +2436,27 @@ li {
   .autoContainer {
     padding: 0 15px;
   }
+
   h1 {
     font-size: 42px;
   }
+
   h2 {
     font-size: 34px;
   }
+
   h3 {
     font-size: 34px;
   }
+
   h4 {
     font-size: 20px;
   }
+
   p.xlg {
     font-size: 18px;
   }
+
   .footer__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2361,12 +2496,14 @@ li {
   .footer__copyright {
     margin-top: 80px;
   }
+
   .header__inner .logo {
     font-size: 13px;
   }
   .header__inner .burger {
     font-size: 8px;
   }
+
   .hero {
     margin-bottom: 20px;
   }
@@ -2377,6 +2514,7 @@ li {
   .hero__inner-license {
     font-size: 20px;
   }
+
   .construction__inner-info-arrows {
     font-size: 8px !important;
   }
@@ -2384,6 +2522,7 @@ li {
     -webkit-transform: translateY(0.25em);
             transform: translateY(0.25em);
   }
+
   .electrical__inner-list {
     gap: 10px;
   }
@@ -2398,6 +2537,7 @@ li {
     -webkit-transform: translateY(0.25em);
             transform: translateY(0.25em);
   }
+
   .feedbacks__item {
     padding: 10px;
   }
@@ -2412,6 +2552,7 @@ li {
     -webkit-transform: translateY(0.25em);
             transform: translateY(0.25em);
   }
+
   .projects__inner-arrows {
     font-size: 8px !important;
     margin-top: 25px;
@@ -2425,15 +2566,19 @@ li {
   ._hideMob {
     display: none;
   }
+
   h1 {
     font-size: 38px;
   }
+
   h2 {
     font-size: 30px;
   }
+
   h3 {
     font-size: 28px;
   }
+
   .hero {
     padding: 90px 0 60px 0;
   }
@@ -2449,6 +2594,7 @@ li {
   .hero__inner .logo {
     font-size: 32px;
   }
+
   .about__inner-content {
     gap: 20px;
   }
@@ -2458,6 +2604,7 @@ li {
   .about__counter-item small {
     font-size: 14px;
   }
+
   .projects__inner-tabs {
     gap: 10px;
     -webkit-box-pack: space-evenly;
@@ -2467,6 +2614,7 @@ li {
   .projects__inner-tab {
     font-size: 16px;
   }
+
   .charger__inner-body {
     gap: 20px;
   }
@@ -2476,6 +2624,7 @@ li {
   .charger__tab-text {
     font-size: 14px;
   }
+
   .electrical__inner-list li {
     width: 100%;
   }
@@ -2523,6 +2672,7 @@ li {
     font-size: 11px;
     margin-top: 70px;
   }
+
   .hero {
     margin-bottom: 0;
   }
@@ -2542,10 +2692,12 @@ li {
   .hero__inner h1 br {
     display: none;
   }
+
   .contact__inner-list {
     gap: 12px;
     font-size: 16px;
   }
+
   .construction__inner-info-arrows {
     width: 100%;
     -webkit-box-pack: justify;
@@ -2553,6 +2705,7 @@ li {
             justify-content: space-between;
     font-size: 6px !important;
   }
+
   .electrical__inner-slider-arrows {
     width: 100%;
     -webkit-box-pack: justify;
@@ -2561,6 +2714,7 @@ li {
     margin-top: 25px;
     font-size: 6px !important;
   }
+
   .feedbacks__item {
     padding: 10px;
   }
@@ -2575,6 +2729,7 @@ li {
     font-size: 6px !important;
     margin-top: 20px;
   }
+
   .projects__inner-tab {
     font-size: 14px;
   }
@@ -2591,6 +2746,9 @@ li {
   }
 }
 @media (max-width: 370px) {
+  .footer__inner-form {
+    padding: 20px 10px;
+  }
   .footer__copyright {
     font-size: 10px;
   }
