--- a/css/main.css
+++ b/css/main.css
@@ -1410,6 +1410,9 @@ li {
   opacity: 0 !important;
   pointer-events: none;
   max-height: 0;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+  -moz-transition: all 0.2s ease-in-out 0s;
 }
 .electrical__inner .swiper-slide-active {
   opacity: 1 !important;
