--- a/css/main.css
+++ b/css/main.css
@@ -1520,18 +1520,15 @@ li {
   border-bottom: 1px solid transparent;
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
-  scrollbar-width: none;
-  /* Firefox 64 */
-  -ms-overflow-style: none;
-  /* Internet Explorer 11 */
+  scrollbar-width: none; /* Firefox 64 */
+  -ms-overflow-style: none; /* Internet Explorer 11 */
   color: #000000;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 1.3;
 }
-.charger__tab-text::-webkit-scrollbar {
-  /** WebKit */
+.charger__tab-text::-webkit-scrollbar { /** WebKit */
   display: none;
 }
 .charger__tab.active .charger__tab-header {
@@ -1691,6 +1688,11 @@ li {
           flex-direction: column !important;
   -ms-flex-wrap: wrap !important;
       flex-wrap: wrap !important;
+}
+.projects__inner-slider2 .swiper:not(.swiper-initialized) {
+  height: 400px;
+  visibility: hidden;
+  overflow: hidden;
 }
 .projects__inner-arrows {
   display: -webkit-box;
@@ -1857,11 +1859,9 @@ li {
   .header__inner .logo {
     font-size: 18px;
   }
-
   .nav__inner-link {
     font-size: 20px;
   }
-
   .hero {
     padding: 170px 0 100px 0;
   }
@@ -1869,7 +1869,6 @@ li {
     min-height: calc(95vh - 270px);
     gap: 25px;
   }
-
   .electrical__inner-image {
     margin-top: 60px;
   }
@@ -1878,15 +1877,12 @@ li {
   .anchor {
     top: -80px;
   }
-
   h1 {
     font-size: 56px;
   }
-
   h2 {
     font-size: 44px;
   }
-
   p {
     font-size: 18px;
     line-height: 1.3em;
@@ -1898,25 +1894,21 @@ li {
     font-size: 16px;
     line-height: 1.3em;
   }
-
   .header__inner .logo {
     font-size: 16px;
   }
-
   .nav__inner {
     gap: 23px;
   }
   .nav__inner-link {
     font-size: 18px;
   }
-
   .footer__inner-info {
     width: 280px;
   }
   .footer__inner-links {
     width: calc(100% - 640px);
   }
-
   .about__inner {
     -webkit-box-align: end;
         -ms-flex-align: end;
@@ -1928,7 +1920,6 @@ li {
   .about__counter-item small {
     font-size: 18px;
   }
-
   .charger__inner-body-banner {
     width: calc(100% - 460px);
   }
@@ -1938,7 +1929,6 @@ li {
   .charger__tab-text {
     font-size: 18px;
   }
-
   .electrical__inner-row-wrapper {
     gap: 50px;
     width: calc(100% - 390px);
@@ -1966,15 +1956,12 @@ li {
   .autoContainer {
     padding: 0 40px;
   }
-
   h1 {
     font-size: 52px;
   }
-
   h2 {
     font-size: 40px;
   }
-
   p {
     font-size: 16px;
     line-height: 1.3em;
@@ -1986,14 +1973,12 @@ li {
     font-size: 14px;
     line-height: 1.2em;
   }
-
   .hero__inner .logo {
     font-size: 40px;
   }
   .hero__inner-license {
     font-size: 26px;
   }
-
   .about__inner-content {
     width: 420px;
     gap: 25px;
@@ -2007,7 +1992,6 @@ li {
   .about__counter-item small {
     font-size: 16px;
   }
-
   .construction__inner-row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
@@ -2027,7 +2011,6 @@ li {
   .construction__inner-slider {
     width: 100%;
   }
-
   .electrical__inner-row {
     padding-bottom: 70px !important;
   }
@@ -2090,7 +2073,6 @@ li {
             flex-direction: column;
     gap: 50px;
   }
-
   .charger__inner-body-banner {
     width: calc(100% - 410px);
   }
@@ -2104,19 +2086,16 @@ li {
   .charger__tab-text {
     font-size: 16px;
   }
-
   .projects__inner-tabs {
     margin-bottom: 20px;
   }
   .projects__inner-tab {
     font-size: 20px;
   }
-
   .contact__inner-list {
     gap: 15px;
     font-size: 22px;
   }
-
   .footer__inner {
     gap: 50px;
   }
@@ -2142,15 +2121,12 @@ li {
   .autoContainer {
     padding: 0 30px;
   }
-
   .anchor {
     top: -60px;
   }
-
   h1 {
     font-size: 48px;
   }
-
   .header {
     padding: 25px 0;
   }
@@ -2166,7 +2142,6 @@ li {
     display: block;
     z-index: 2;
   }
-
   .nav {
     position: fixed;
     top: 0;
@@ -2266,14 +2241,12 @@ li {
     -webkit-transform: translate(0);
             transform: translate(0);
   }
-
   .hero {
     padding: 100px 0 120px 0;
   }
   .hero__inner {
     min-height: calc(95vh - 220px);
   }
-
   .about__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2316,7 +2289,6 @@ li {
     -webkit-transition-delay: 0s !important;
             transition-delay: 0s !important;
   }
-
   .charger__inner-body-banner {
     width: calc(100% - 370px);
   }
@@ -2329,11 +2301,9 @@ li {
   .charger__tab-text {
     font-size: 14px;
   }
-
   .feedbacks__item-user {
     font-size: 18px;
   }
-
   .contact__inner-list {
     gap: 15px;
     font-size: 20px;
@@ -2343,27 +2313,21 @@ li {
   .autoContainer {
     padding: 0 25px;
   }
-
   h1 {
     font-size: 44px;
   }
-
   h2 {
     font-size: 38px;
   }
-
   h3 {
     font-size: 38px;
   }
-
   h4 {
     font-size: 22px;
   }
-
   h5 {
     font-size: 18px;
   }
-
   .footer {
     padding: 60px 0 30px 0;
   }
@@ -2413,7 +2377,6 @@ li {
   .footer__copyright {
     margin-top: 100px;
   }
-
   .hero {
     padding: 90px 0 100px 0;
   }
@@ -2429,7 +2392,6 @@ li {
   .hero__inner .logo {
     font-size: 36px;
   }
-
   .charger__inner-body {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2455,7 +2417,6 @@ li {
   .charger__tab-text {
     font-size: 16px;
   }
-
   .projects__inner-slider {
     position: relative;
     padding-bottom: unset;
@@ -2480,11 +2441,9 @@ li {
     right: unset;
     font-size: 14px;
   }
-
   .projects__inner-tab {
     font-size: 18px;
   }
-
   .contact__inner-list {
     gap: 15px;
     font-size: 18px;
@@ -2494,27 +2453,21 @@ li {
   .autoContainer {
     padding: 0 15px;
   }
-
   h1 {
     font-size: 42px;
   }
-
   h2 {
     font-size: 34px;
   }
-
   h3 {
     font-size: 34px;
   }
-
   h4 {
     font-size: 20px;
   }
-
   p.xlg {
     font-size: 18px;
   }
-
   .footer__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2554,14 +2507,12 @@ li {
   .footer__copyright {
     margin-top: 80px;
   }
-
   .header__inner .logo {
     font-size: 13px;
   }
   .header__inner .burger {
     font-size: 8px;
   }
-
   .hero {
     margin-bottom: 20px;
   }
@@ -2572,7 +2523,6 @@ li {
   .hero__inner-license {
     font-size: 20px;
   }
-
   .construction__inner-info-arrows {
     font-size: 8px !important;
   }
@@ -2580,7 +2530,6 @@ li {
     -webkit-transform: translateY(0.25em);
             transform: translateY(0.25em);
   }
-
   .electrical__inner-list {
     gap: 10px;
   }
@@ -2601,7 +2550,6 @@ li {
   .electrical__inner-image .ratioImage {
     padding-bottom: 50%;
   }
-
   .feedbacks__item {
     padding: 10px;
   }
@@ -2616,7 +2564,12 @@ li {
     -webkit-transform: translateY(0.25em);
             transform: translateY(0.25em);
   }
-
+  .projects__inner-tabs {
+    gap: 15px;
+  }
+  .projects__inner-tab {
+    font-size: 16px;
+  }
   .projects__inner-arrows {
     font-size: 8px !important;
     margin-top: 25px;
@@ -2630,19 +2583,15 @@ li {
   ._hideMob {
     display: none;
   }
-
   h1 {
     font-size: 38px;
   }
-
   h2 {
     font-size: 30px;
   }
-
   h3 {
     font-size: 28px;
   }
-
   .hero {
     padding: 90px 0 60px 0;
   }
@@ -2658,7 +2607,6 @@ li {
   .hero__inner .logo {
     font-size: 32px;
   }
-
   .about__inner-content {
     gap: 20px;
   }
@@ -2668,17 +2616,22 @@ li {
   .about__counter-item small {
     font-size: 14px;
   }
-
+  .projects__inner h3 {
+    margin-bottom: 20px;
+  }
   .projects__inner-tabs {
-    gap: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 5px;
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
   }
   .projects__inner-tab {
-    font-size: 16px;
+    padding: 0.2em;
   }
-
   .charger__inner-body {
     gap: 20px;
   }
@@ -2688,7 +2641,6 @@ li {
   .charger__tab-text {
     font-size: 14px;
   }
-
   .electrical__inner-list li {
     width: 100%;
   }
@@ -2736,7 +2688,6 @@ li {
     font-size: 11px;
     margin-top: 70px;
   }
-
   .hero {
     margin-bottom: 0;
   }
@@ -2756,12 +2707,10 @@ li {
   .hero__inner h1 br {
     display: none;
   }
-
   .contact__inner-list {
     gap: 12px;
     font-size: 16px;
   }
-
   .construction__inner-info-arrows {
     width: 100%;
     -webkit-box-pack: justify;
@@ -2769,7 +2718,6 @@ li {
             justify-content: space-between;
     font-size: 6px !important;
   }
-
   .electrical__inner-slider-arrows {
     width: 100%;
     -webkit-box-pack: justify;
@@ -2778,7 +2726,6 @@ li {
     margin-top: 25px;
     font-size: 6px !important;
   }
-
   .feedbacks__item {
     padding: 10px;
   }
@@ -2793,7 +2740,6 @@ li {
     font-size: 6px !important;
     margin-top: 20px;
   }
-
   .projects__inner-tab {
     font-size: 14px;
   }
