--- a/css/main.css
+++ b/css/main.css
@@ -1325,6 +1325,7 @@ li {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 400px;
   gap: 20px;
 }
 .electrical__inner-list li {
@@ -1935,6 +1936,7 @@ li {
   }
   .electrical__inner-list {
     gap: 18px;
+    width: 360px;
   }
   .electrical__inner-list li {
     font-size: 18px;
