--- a/css/main.css
+++ b/css/main.css
@@ -1033,7 +1033,7 @@ li {
   gap: 30px;
   color: #fff;
   max-width: 700px;
-  min-height: calc(95vh - 360px);
+  min-height: calc(100vh - 360px);
   width: 63%;
 }
 .hero__inner .logo {
@@ -1867,7 +1867,7 @@ li {
     padding: 170px 0 100px 0;
   }
   .hero__inner {
-    min-height: calc(95vh - 270px);
+    min-height: calc(100vh - 270px);
     gap: 25px;
   }
   .electrical__inner-image {
@@ -2247,7 +2247,8 @@ li {
     padding: 100px 0 120px 0;
   }
   .hero__inner {
-    min-height: calc(95vh - 220px);
+    min-height: calc(90vh - 220px);
+    min-height: calc(100dvh - 220px);
   }
   .about__inner {
     -webkit-box-orient: vertical;
@@ -2386,7 +2387,8 @@ li {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    min-height: calc(65vh - 190px);
+    min-height: calc(90vh - 190px);
+    min-height: calc(100dvh - 190px);
   }
   .hero__inner-license {
     font-size: 22px;
@@ -2598,7 +2600,8 @@ li {
     padding: 90px 0 60px 0;
   }
   .hero__inner {
-    min-height: calc(85vh - 150px);
+    min-height: calc(90vh - 150px);
+    min-height: calc(100dvh - 150px);
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
